@@ -1,3 +1,5 @@
+- #146 Use single available language of country as default language
+
 2026.1.1
 - #145 Add how-to guides
 - #144 PL: Add Christmas Eve as holiday
